style: fix issues with '<.simple_form>' action spacing

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -131,7 +131,9 @@
   }
 
   .form-button {
+    display: block;
     min-width: 8rem;
+    margin: 0.5rem;
   }
 
   .template-center {
